--- a/src/app/create-customer/create-customer.component.html
+++ b/src/app/create-customer/create-customer.component.html
@@ -7,7 +7,7 @@
     <div class="form-group mb-2" >
         <label for="">User Id</label>
         <input type="number" class="form-control" id="user_id"
-            [(ngModel)] = "customer.user_id" name="user_id">
+            [(ngModel)] = "customer.user_id" name="user_id" required minlength="4">
     </div>
 
     <div class="form-group mb-2">
