--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
    <ul class="navbar-nav">
       <li class="nav-item">
          <a routerLink="customers" routerLinkActive="active" class="nav-link" href="">Customer List</a>
       </li>
       <li class="nav-item">
          <a routerLink="create-customer" routerLinkActive="active" class="nav-link" href="">Add Customer</a>
+      </li>
+
+      <li class="nav-item">
+         <a routerLink=" " routerLinkActive="active" class="nav-link" href="">Bill Details</a>
       </li>
    </ul>
 </nav>
@@ -16,7 +20,7 @@
 </div>
 
 
-<footer class="footer">
+<footer class="footer bg-dark">
    <div class="container">
       <span>All Rights Reserved </span>
    </div>
